feat(redis): add support for URIs and usernames